--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 /*
-	Theme Name: HTML5 Blank
-	Theme URI: http://html5blank.com
-	Description: HTML5 Blank WordPress Theme
-	Version: 1.4.3
-	Author: Todd Motto (@toddmotto)
-	Author URI: http://toddmotto.com
-	Tags: Blank, HTML5, CSS3
+	Theme Name: 4Pixels Theme
+	Theme URI: 4pixels.nl
+	Description: Using "HTML5 Blank WordPress Theme" as base.
+	Version: 1
+	Author: 4Pixels
+	Tags: Blank, HTML5, CSS3, 4Pixels
 
 	License: MIT
 	License URI: http://opensource.org/licenses/mit-license.php
